<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTeal"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:padding="@dimen/interlineado"
            android:text="@string/text_input"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorWhite" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:src="@mipmap/ic_launcher" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/back_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@color/colorGrey"
        android:gravity="center_horizontal"
        android:padding="@dimen/border">

        <TextView
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_bottom"
            android:background="@color/colorWhite"
            android:hint="@string/hint_ip"
            android:clickable="true"
            android:gravity="center"
            android:inputType="number"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/back_number_host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:background="@color/colorGrey"
        android:gravity="center_horizontal"
        android:padding="@dimen/border">

        <TextView
            android:id="@+id/number_host"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_bottom"
            android:background="@color/colorWhite"
            android:hint="@string/hint_number_host"
            android:clickable="true"
            android:gravity="center"
            android:inputType="number"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:weightSum="7">

        <LinearLayout
            android:id="@+id/options_classful"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:orientation="vertical"
            android:visibility="visible">

            <RadioGroup
                android:id="@+id/rg_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/rb_a">

                <RadioButton
                    android:id="@+id/rb_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/class_a" />

                <RadioButton
                    android:id="@+id/rb_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/class_b" />

                <RadioButton
                    android:id="@+id/rb_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/class_c" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_input3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4.5"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinner_mask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"/>
            <Button
                android:id="@+id/btn_calculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorTeal"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/app_name"
                android:textColor="@color/colorWhite"
                android:layout_marginBottom="@dimen/border"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorGrey" />


</LinearLayout>