<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/header_drawer"
        android:gravity="center_vertical"
        android:weightSum="5">
        <ImageView
            android:id="@+id/IVicono"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:adjustViewBounds="true"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/interlineado"
            android:layout_weight="3.5"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TVtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/interlineado"
                android:gravity="center_vertical"
                android:text="@string/app_name"
                android:textSize="30sp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/TVsubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:text="@string/subtitle"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorWhite"
                android:textStyle="italic" />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/interlineado"
        android:layout_marginTop="@dimen/interlineado"
        android:text="@string/title_list"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorTeal" />
</LinearLayout>
